--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "start": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-media-recorder": "^1.6.6"
